# apiclient/models/param_schedule_deletion_request.go
@@ -1,78 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// ParamScheduleDeletionRequest param schedule deletion request
-//
-// swagger:model param.ScheduleDeletionRequest
-type ParamScheduleDeletionRequest struct {
-
-	// file ids
-	// Required: true
-	// Min Items: 1
-	FileIds []string `json:"file_ids"`
-}
-
-// Validate validates this param schedule deletion request
-func (m *ParamScheduleDeletionRequest) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateFileIds(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ParamScheduleDeletionRequest) validateFileIds(formats strfmt.Registry) error {
-
-	if err := validate.Required("file_ids", "body", m.FileIds); err != nil {
-		return err
-	}
-
-	iFileIdsSize := int64(len(m.FileIds))
-
-	if err := validate.MinItems("file_ids", "body", iFileIdsSize, 1); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validates this param schedule deletion request based on context it is used
-func (m *ParamScheduleDeletionRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ParamScheduleDeletionRequest) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ParamScheduleDeletionRequest) UnmarshalBinary(b []byte) error {
-	var res ParamScheduleDeletionRequest
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
